--- a/stlyesheet.css
+++ b/stlyesheet.css
@@ -1,3 +1,17 @@
+@media (max-width:1000px) {
+
+}
+@media (max-width:767px) {
+.ziko{
+  display: none;
+
+}
+.menu-icon{
+  display: none;
+}
+
+
+
 header{
   width: 100%;
   height:1px;
